# page-loader

./: Makefile  README.md  pyproject.toml
.github/workflows/: pylint.yml  pytest.yml
page_loader/: __init__.py  cli.py  content_loader.py  data_preparer.py  download_files.py  downloader.py  handler.py  html.py  logger.py  page_loader.py  url.py  url_handler.py  work_with_paths.py  work_with_urls.py  write_html.py
page_loader/scripts/: page_load.py
tests/: html_page.html  test_page_loader.py
tests/fixtures/: ru-hexlet-io-courses.html  test_page.html  test_scr_link.html
tests/fixtures/links/: link1.css
tmp/: www-gov-uk.html
tmp/www-gov-uk_files/: www-gov-uk-assets-frontend-application-0b1c2de66b077c037eaf692bf55c52f55ee01286ca90022773ca69f970bb8033.css  www-gov-uk-assets-frontend-application-ffe78f1c38c12a8ef67b91cb3e6ad0e5e31a812a25d1a046031001c8ba4cfeba.js  www-gov-uk-assets-static-application-d1b60582aa28a0f0f6a7a752b335012f21e07e7147ee3e629510068f193bc3ff.css  www-gov.uk
